# ChangeLog for sys-apps/pcmciautils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.20 2006/03/24 16:31:25 brix Exp $

  24 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/pcmciautils-012-pccardctl-uclibc.patch, pcmciautils-012.ebuild:
  Fix compilation with uClibc, thanks to Natanael Copa in bug #125598.

  17 Feb 2006; Joseph Jezak <josejx@gentoo.org> pcmciautils-012.ebuild:
  Marked ppc stable for bug #121192.

  01 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
  pcmciautils-012.ebuild:
  Stable on x86, bug #121192.

  19 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  pcmciautils-010.ebuild, pcmciautils-011.ebuild, pcmciautils-012.ebuild:
  Updated for new style virtual/pcmcia.

  12 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  pcmciautils-010.ebuild, pcmciautils-011.ebuild, pcmciautils-012.ebuild:
  Remove cis USE flag + DEPEND.

*pcmciautils-012 (28 Dec 2005)

  28 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  +pcmciautils-012.ebuild:
  Version bump.

  12 Dec 2005; Luis Medinas <metalgod@gentoo.org> pcmciautils-011.ebuild:
  Added ~amd64 keyword. Bug #114383.

  09 Dec 2005; Joseph Jezak <josejx@gentoo.org> pcmciautils-011.ebuild:
  Marked ~ppc for bug #114383.

  07 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  pcmciautils-010.ebuild, pcmciautils-011.ebuild:
  Block virtual/pcmcia.

*pcmciautils-011 (06 Dec 2005)

  06 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  +pcmciautils-011.ebuild:
  Version bump.

  10 Nov 2005; Henrik Brix Andersen <brix@gentoo.org>
  pcmciautils-010.ebuild:
  Updated HOMEPAGE.

  22 Oct 2005; Henrik Brix Andersen <brix@gentoo.org>
  -pcmciautils-007.ebuild, -pcmciautils-008.ebuild:
  Pruned old versions.

*pcmciautils-010 (20 Oct 2005)

  20 Oct 2005; Henrik Brix Andersen <brix@gentoo.org>
  +pcmciautils-010.ebuild:
  Version bump. This version installs as an udev handler when USE=udev, and as