@@ -1,9 +1,7 @@
-MD5 da45ec90493ffce383a82d0ed38249d1 ChangeLog 3004
-MD5 f0b6ef73c257acea57b05a10e0019fc2 files/digest-pcmciautils-010 67
-MD5 c4cd2ddab2c4cdfcb454995185f927d3 files/digest-pcmciautils-011 67
+MD5 69cffe5cdd1486e5faa96d4eca077594 ChangeLog 3204
 MD5 e61be18a09805cd66618da8fb7ce7f52 files/digest-pcmciautils-012 67
+MD5 af764e4b3e678630cab86bc55a73a640 files/digest-pcmciautils-013 67
 MD5 7bc55616a05befe15cf8e86ed05fc57e files/pcmciautils-012-pccardctl-uclibc.patch 251
 MD5 b280eebc74d70d85e664debf1adce2c3 metadata.xml 255
-MD5 c4ef57a636ce47082452f47f164174e5 pcmciautils-010.ebuild 2199
-MD5 21e277d920e9e5078e820311b92d23c6 pcmciautils-011.ebuild 2096
 MD5 d2d84c0d80f36863623b6375539d0664 pcmciautils-012.ebuild 2268
+MD5 38b890d917ad9e2dcd1b514255bbd385 pcmciautils-013.ebuild 2207
