@@ -1,1 +1,0 @@
-MD5 ff3cb012fd1a8801e912054b45420ac2 pcmciautils-010.tar.bz2 35949
