@@ -1,1 +1,0 @@
-MD5 8a7a014ea8177cf4514032722b695a9e pcmciautils-011.tar.bz2 41225
