@@ -1,0 +1,1 @@
+MD5 5882b7c84f095a7492b1ebe7577dce5a pcmciautils-013.tar.bz2 42944
