@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pcmciautils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.20 2006/03/24 16:31:25 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.21 2006/03/26 13:26:34 brix Exp $
+
+*pcmciautils-013 (26 Mar 2006)
+
+  26 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
+  -pcmciautils-010.ebuild, -pcmciautils-011.ebuild, +pcmciautils-013.ebuild:
+  Version bump. Pruned old ebuilds.
 
   24 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
   +files/pcmciautils-012-pccardctl-uclibc.patch, pcmciautils-012.ebuild:
